# df-viewer-poc

./: .gitignore  README.md  pyproject.toml
src/: app.py  models.py
src/core/: __init__.py  core.py  validate.py
src/flows/: validation.py
